--- a/frontend/html/customer.html
+++ b/frontend/html/customer.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Ordering - Customer</title>
+    <title>Ramen X - Customer</title>
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../css/customer.css">
+    <style>
+        /* Make buttons red (brand) except explicit view/update buttons that use primary */
+        .btn-custom { background-color: #ba110c; border: none; color: #fff; }
+        .btn-custom:hover { background-color: #a40f0b; color: #fff; }
+        /* General subtle hover for all buttons */
+        .btn { transition: background-color .15s ease, color .15s ease, transform .05s ease; }
+        .btn:hover { transform: translateY(-1px); }
+    </style>
 </head>
 <body>
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-logo">
-            <img src="../Logo.png" alt="Logo">
-            <h4>Food Ordering</h4>
+            <img src="../assets/Logo.png" alt="Logo">
+            <h4>Ramen X</h4>
         </div>
 
         <div class="sidebar-menu">
@@ -92,7 +100,7 @@
                         </div>
 
                         <div class="cart-actions mt-3">
-                            <button class="btn btn-custom w-100" onclick="placeOrder()">
+                            <button class="btn btn-custom w-100" onclick="openOrderSummaryModal()">
                                 <i class="bi bi-check-circle me-2"></i>Place Order
                             </button>
                         </div>
@@ -129,7 +137,10 @@
 
     <!-- Bootstrap JS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Custom JS -->
+    <script src="../js/api.js"></script>
     <script src="../js/customer.js"></script>
 
     <!-- Order Tracking Modal -->
@@ -149,12 +160,12 @@
                             <small class="d-block"><strong>Order ID:</strong> <span id="track-order-id-info" class="text-primary"></span></small>
                             <small class="d-block"><strong>Date:</strong> <span id="track-order-date"></span></small>
                             <small class="d-block"><strong>Status:</strong> <span id="track-status-badge"></span></small>
+                            <small class="d-block"><strong>Address:</strong> <span id="track-delivery-address"></span></small>
+                            <small class="d-block"><strong>Phone:</strong> <span id="track-phone"></span></small>
                         </div>
                         <div class="col-md-6">
                             <small class="text-muted d-block mb-1"><i class="bi bi-clock"></i> Timeline</small>
                             <small class="d-block"><strong>Placed:</strong> <span id="track-placed-time"></span></small>
-                            <small class="d-block"><strong>Estimated:</strong> <span id="track-estimated-time"></span></small>
-                            <small class="d-block"><strong>Driver:</strong> <span id="track-driver">On the way</span></small>
                         </div>
                     </div>
                     
@@ -178,9 +189,103 @@
                 </div>
                 <div class="modal-footer py-2 px-3">
                     <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-sm btn-custom" onclick="refreshTracking()">
-                        <i class="bi bi-arrow-clockwise me-1"></i>Refresh
-                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add To Cart Modal -->
+    <div class="modal fade" id="addToCartModal" tabindex="-1" aria-labelledby="addToCartModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header py-2 px-3" style="background: linear-gradient(135deg, #222021 0%, #ba110c 100%); color: white;">
+                    <h6 class="modal-title mb-0" id="addToCartModalLabel">
+                        <i class="bi bi-cart-plus me-2"></i>Add to Cart
+                    </h6>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body py-3 px-3">
+                    <div class="d-flex align-items-start mb-2">
+                        <img id="add-cart-image" src="" alt="Item" style="width:70px; height:70px; object-fit:cover; border-radius:6px; margin-right:12px;">
+                        <div>
+                            <div id="add-cart-name" style="font-weight:600;"></div>
+                            <div id="add-cart-desc" class="text-muted" style="font-size: 0.9rem;"></div>
+                            <small class="text-muted d-block mt-1">Price: <span id="add-cart-price"></span></small>
+                        </div>
+                    </div>
+                    <div class="mt-2">
+                        <label class="form-label">Quantity</label>
+                        <div class="d-flex align-items-center gap-2">
+                            <button class="btn btn-outline-secondary" onclick="changeAddQty(-1)"><i class="bi bi-dash"></i></button>
+                            <input type="number" id="add-cart-qty" class="form-control" value="1" min="1" style="width:100px; text-align:center;">
+                            <button class="btn btn-outline-secondary" onclick="changeAddQty(1)"><i class="bi bi-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer py-2 px-3">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-custom" onclick="confirmAddToCart()"><i class="bi bi-cart-plus me-1"></i>Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Order Summary Modal -->
+    <div class="modal fade" id="orderSummaryModal" tabindex="-1" aria-labelledby="orderSummaryModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header py-2 px-3" style="background: linear-gradient(135deg, #222021 0%, #ba110c 100%); color: white;">
+                    <h6 class="modal-title mb-0" id="orderSummaryModalLabel">
+                        <i class="bi bi-receipt me-2"></i>Order Summary
+                    </h6>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body py-3 px-3">
+                    <div class="table-responsive mb-3">
+                        <table class="table table-sm table-hover mb-0">
+                            <thead>
+                                <tr>
+                                    <th>Item</th>
+                                    <th class="text-center" style="width:100px;">Qty</th>
+                                    <th class="text-end" style="width:140px;">Price</th>
+                                    <th class="text-end" style="width:140px;">Subtotal</th>
+                                </tr>
+                            </thead>
+                            <tbody id="summaryTableBody"></tbody>
+                            <tfoot class="table-active">
+                                <tr>
+                                    <th colspan="3" class="text-end">Total</th>
+                                    <th class="text-end" id="summaryTotal"></th>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+
+                    <div class="row g-3">
+                        <div class="col-md-8">
+                            <label class="form-label">Delivery Address</label>
+                            <textarea id="summaryAddress" class="form-control" rows="3" placeholder="Enter delivery address"></textarea>
+                            <div class="mt-2">
+                                <label class="form-label">Phone Number</label>
+                                <input type="tel" id="summaryPhone" class="form-control" placeholder="e.g., 09XXXXXXXXX">
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <label class="form-label">Payment Method</label>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="summaryPayment" id="summary-cod" value="cod" checked>
+                                <label class="form-check-label" for="summary-cod">Cash on Delivery (COD)</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="summaryPayment" id="summary-gcash" value="gcash">
+                                <label class="form-check-label" for="summary-gcash">GCash</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer py-2 px-3">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-custom" onclick="confirmOrder()"><i class="bi bi-check2-circle me-1"></i>Confirm Order</button>
                 </div>
             </div>
         </div>
