--- a/frontend/html/dashboard.html
+++ b/frontend/html/dashboard.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Ordering - Dashboard</title>
+    <title>Ramen X - Dashboard</title>
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../css/dashboard.css">
-    <script src="../js/dashboard.js"></script>
+    <style>
+        /* Button hover/active effects for a more modern feel */
+        .btn { transition: background-color .15s ease, color .15s ease, transform .05s ease, box-shadow .15s ease; }
+        .btn:hover { transform: translateY(-1px); box-shadow: 0 6px 12px rgba(0,0,0,0.08); }
+        .btn:active { transform: translateY(0); }
+        .btn-custom:hover { background-color: #a40f0b; color: #fff; }
+        .btn-light:hover { background-color: #f0f2f4; }
+        .btn-outline-secondary:hover { background-color: #e9ecef; color: #212529; }
+        .btn-danger:hover { filter: brightness(0.95); }
+    </style>
 </head>
 <body>
     <!-- Sidebar -->
     <div class="sidebar" style="width: 280px;">
         <div class="sidebar-logo">
-            <img src="Logo.png" alt="Logo">
-            <h4>Food Ordering</h4>
+            <img src="../assets/Logo.png" alt="Logo">
+            <h4>Ramen X</h4>
         </div>
 
         <div class="sidebar-menu">
@@ -26,9 +35,9 @@
                 <span>Menu Management</span>
             </a>
 
-            <a href="#" class="menu-item" onclick="showContent('reports')">
-                <i class="bi bi-file-earmark-text"></i>
-                <span>Reports</span>
+            <a href="#" class="menu-item" onclick="showContent('userManagement')">
+                <i class="bi bi-people"></i>
+                <span>User Management</span>
             </a>
 
             <a href="#" class="menu-item" onclick="logout()">
@@ -49,9 +58,14 @@
             <div class="card card-custom">
                 <div class="card-header card-header-custom d-flex justify-content-between align-items-center">
                     <h5 class="mb-0"><i class="bi bi-list-ul me-2"></i>All Menu Items</h5>
-                    <button class="btn btn-light" onclick="showContent('addMenuItem')">
-                        <i class="bi bi-plus-circle me-2"></i>Add New Item
-                    </button>
+                    <div class="d-flex gap-2">
+                        <button class="btn btn-light" onclick="showContent('addMenuItem')">
+                            <i class="bi bi-plus-circle me-2"></i>Add New Item
+                        </button>
+                        <button class="btn btn-outline-light" onclick="openManageCategories()">
+                            <i class="bi bi-list-ul me-2"></i>Manage Categories
+                        </button>
+                    </div>
                 </div>
                 <div class="card-body">
                     <div class="mb-3">
@@ -69,30 +83,7 @@
                                     <th>Actions</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td><img src="https://via.placeholder.com/50" alt="Food" style="border-radius: 5px;"></td>
-                                    <td>Pizza Margherita</td>
-                                    <td>Fresh mozzarella, tomato sauce</td>
-                                    <td>$12.99</td>
-                                    <td>Main Dish</td>
-                                    <td>
-                                        <button class="btn btn-sm btn-custom" onclick="showEditForm('Pizza Margherita', 'Fresh mozzarella, tomato sauce', '12.99', 'Main Dish')">Edit</button>
-                                        <button class="btn btn-sm btn-danger" onclick="deleteMenuItem('Pizza Margherita')">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="https://via.placeholder.com/50" alt="Food" style="border-radius: 5px;"></td>
-                                    <td>Caesar Salad</td>
-                                    <td>Fresh romaine lettuce with parmesan</td>
-                                    <td>$8.99</td>
-                                    <td>Salad</td>
-                                    <td>
-                                        <button class="btn btn-sm btn-custom" onclick="showEditForm('Caesar Salad', 'Fresh romaine lettuce with parmesan', '8.99', 'Salad')">Edit</button>
-                                        <button class="btn btn-sm btn-danger" onclick="deleteMenuItem('Caesar Salad')">Delete</button>
-                                    </td>
-                                </tr>
-                            </tbody>
+                            <tbody></tbody>
                         </table>
                     </div>
                 </div>
@@ -203,122 +194,74 @@
             </div>
         </div>
 
-        <!-- Reports Content -->
-        <div class="content-section" id="reports">
+        <!-- User Management Content -->
+        <div class="content-section" id="userManagement">
             <div class="page-header">
-                <h2><i class="bi bi-file-earmark-text me-2"></i>Sales Reports</h2>
+                <h2><i class="bi bi-people me-2"></i>User Management</h2>
             </div>
 
             <div class="card card-custom">
-                <div class="card-header card-header-custom">
-                    <h5 class="mb-0"><i class="bi bi-table me-2"></i>Sales Report</h5>
+                <div class="card-header card-header-custom d-flex justify-content-between align-items-center">
+                    <h5 class="mb-0"><i class="bi bi-person-gear me-2"></i>Staff & Admin Accounts</h5>
+                    <button class="btn btn-light" onclick="openAddUser()">
+                        <i class="bi bi-person-plus me-2"></i>Add User
+                    </button>
                 </div>
                 <div class="card-body">
                     <div class="mb-3 d-flex justify-content-between">
-                        <div>
-                            <input type="text" class="form-control" placeholder="Search by order ID, customer name..." style="width: 300px;">
-                        </div>
-                        <div>
-                            <select class="form-select" style="width: 200px;">
-                                <option>All Time</option>
-                                <option>Today</option>
-                                <option>This Week</option>
-                                <option>This Month</option>
-                                <option>Last Month</option>
-                            </select>
-                        </div>
+                        <input type="text" class="form-control" placeholder="Search by name, email or username" style="max-width: 320px;">
+                        <select class="form-select" style="max-width: 200px;">
+                            <option value="all">All Roles</option>
+                            <option value="staff">Staff</option>
+                            <option value="admin">Admin</option>
+                        </select>
                     </div>
                     <div class="table-responsive">
                         <table class="table table-custom">
                             <thead>
                                 <tr>
-                                    <th>Order ID</th>
-                                    <th>Date</th>
-                                    <th>Customer</th>
-                                    <th>Items</th>
-                                    <th>Quantity</th>
-                                    <th>Total Amount</th>
-                                    <th>Status</th>
+                                    <th>Username</th>
+                                    <th>Role</th>
                                     <th>Actions</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>#1234</td>
-                                    <td>2024-01-15</td>
-                                    <td>John Doe</td>
-                                    <td>Pizza Margherita, Caesar Salad</td>
-                                    <td>2</td>
-                                    <td>$21.98</td>
-                                    <td><span class="badge bg-success">Completed</span></td>
-                                    <td>
-                                        <button class="btn btn-sm btn-custom" onclick="showOrderDetails('1234', 'John Doe', 'Pizza Margherita, Caesar Salad', '2', '$21.98', 'Completed', '2024-01-15')">View Details</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>#1235</td>
-                                    <td>2024-01-15</td>
-                                    <td>Jane Smith</td>
-                                    <td>Burger, Fries</td>
-                                    <td>2</td>
-                                    <td>$14.99</td>
-                                    <td><span class="badge bg-success">Completed</span></td>
-                                    <td>
-                                        <button class="btn btn-sm btn-custom" onclick="showOrderDetails('1235', 'Jane Smith', 'Burger, Fries', '2', '$14.99', 'Completed', '2024-01-15')">View Details</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>#1236</td>
-                                    <td>2024-01-14</td>
-                                    <td>Bob Johnson</td>
-                                    <td>Chicken Sandwich, Pepsi</td>
-                                    <td>2</td>
-                                    <td>$16.50</td>
-                                    <td><span class="badge bg-success">Completed</span></td>
-                                    <td>
-                                        <button class="btn btn-sm btn-custom" onclick="showOrderDetails('1236', 'Bob Johnson', 'Chicken Sandwich, Pepsi', '2', '$16.50', 'Completed', '2024-01-14')">View Details</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>#1237</td>
-                                    <td>2024-01-14</td>
-                                    <td>Alice Williams</td>
-                                    <td>Pasta Carbonara, Garlic Bread</td>
-                                    <td>2</td>
-                                    <td>$28.50</td>
-                                    <td><span class="badge bg-success">Completed</span></td>
-                                    <td>
-                                        <button class="btn btn-sm btn-custom" onclick="showOrderDetails('1237', 'Alice Williams', 'Pasta Carbonara, Garlic Bread', '2', '$28.50', 'Completed', '2024-01-14')">View Details</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>#1238</td>
-                                    <td>2024-01-13</td>
-                                    <td>Charlie Brown</td>
-                                    <td>Fish and Chips, Cola</td>
-                                    <td>2</td>
-                                    <td>$22.99</td>
-                                    <td><span class="badge bg-success">Completed</span></td>
-                                    <td>
-                                        <button class="btn btn-sm btn-custom" onclick="showOrderDetails('1238', 'Charlie Brown', 'Fish and Chips, Cola', '2', '$22.99', 'Completed', '2024-01-13')">View Details</button>
-                                    </td>
-                                </tr>
+                            <tbody id="usersTable">
+                                <!-- Users will be loaded here -->
                             </tbody>
                         </table>
                     </div>
-                    <div class="d-flex justify-content-between align-items-center mt-3">
-                        <div>
-                            <span class="text-muted">Showing 1-5 of 1,234 entries</span>
+                </div>
+            </div>
+        </div>
+        
+        <!-- Add User Modal -->
+        <div class="modal fade" id="addUserModal" tabindex="-1" aria-labelledby="addUserModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header" style="background: linear-gradient(135deg, #222021 0%, #ba110c 100%); color: white;">
+                        <h5 class="modal-title" id="addUserModalLabel"><i class="bi bi-person-plus me-2"></i>Add User</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="mb-2">
+                            <label class="form-label">Role</label>
+                            <select id="addUserRole" class="form-select">
+                                <option value="staff">Staff</option>
+                                <option value="admin">Admin</option>
+                            </select>
                         </div>
-                        <nav>
-                            <ul class="pagination mb-0">
-                                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                            </ul>
-                        </nav>
+                        <div class="mb-2">
+                            <label class="form-label">Username</label>
+                            <input id="addUserUsername" type="text" class="form-control" placeholder="Enter username">
+                        </div>
+                        <div class="mb-2">
+                            <label class="form-label">Password</label>
+                            <input id="addUserPassword" type="password" class="form-control" placeholder="Enter password">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-custom" onclick="submitAddUser()">Add User</button>
                     </div>
                 </div>
             </div>
@@ -327,8 +270,11 @@
 
     <!-- Bootstrap JS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Custom JS -->
-    <script src="js/dashboard.js"></script>
+    <script src="../js/api.js"></script>
+    <script src="../js/dashboard.js"></script>
 
     <!-- Order Details Modal -->
     <div class="modal fade" id="orderDetailsModal" tabindex="-1" aria-labelledby="orderDetailsModalLabel" aria-hidden="true">
@@ -399,6 +345,49 @@
                     <button type="button" class="btn btn-primary">
                         <i class="bi bi-download me-2"></i>Download PDF
                     </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Add Category Modal removed; functionality moved into Manage Categories Modal -->
+
+    <!-- Manage Categories Modal -->
+    <div class="modal fade" id="manageCategoriesModal" tabindex="-1" aria-labelledby="manageCategoriesModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header" style="background: linear-gradient(135deg, #222021 0%, #ba110c 100%); color: white;">
+                    <h5 class="modal-title" id="manageCategoriesModalLabel"><i class="bi bi-list-ul me-2"></i>Categories</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row g-2 mb-3">
+                        <div class="col">
+                            <input type="text" class="form-control" id="manage-new-category-name" placeholder="New category name" />
+                        </div>
+                        <div class="col-auto">
+                            <button type="button" class="btn btn-custom" onclick="createCategoryInManage()">
+                                <i class="bi bi-plus-lg me-1"></i>Add Category
+                            </button>
+                        </div>
+                    </div>
+                    <div class="table-responsive">
+                        <table class="table table-sm table-hover mb-0">
+                            <thead>
+                                <tr>
+                                    <th style="width:60%">Name</th>
+                                    <th>Slug</th>
+                                    <th style="width:120px">Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="categoriesTableBody">
+                                <!-- Categories will be rendered here -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
