--- a/frontend/login.html
+++ b/frontend/login.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <style>
        body {
-           background-image: url('Background.jpg');
+           background-image: url('assets/Background.jpg');
            background-size: cover;         /* Make image fill the whole page */
            background-position: center;    /* Keep image centered */
            background-repeat: no-repeat;   /* Prevent tiling */
@@ -23,7 +23,7 @@
         }
 
         .login-container {
-            background-image: url('Container bg.jpg');
+            background-image: url('assets/Container bg.jpg');
             border-radius: 10px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
             padding: 2rem;
@@ -99,7 +99,7 @@
         <div class="login-container">
             <!-- Logo Section (Replaces "LOGIN PORTAL" text with logo image) -->
             <div class="logo">
-                <img src="Logo.png" alt="LOGIN PORTAL"
+                <img src="assets/Logo.png" alt="LOGIN PORTAL"
                  style="width:150px; height:150px; border-radius:50%; border:5px solid #ba110c; object-fit:contain; background:white; padding:10px;">
             </div>
             
@@ -128,7 +128,29 @@
                         <label for="customer-password" class="form-label text-light">Password</label>
                         <input type="password" class="form-control" id="customer-password" placeholder="Enter your password" required>
                     </div>
-                    <button type="submit" class="btn btn-login w-100 text-light">Login as Customer</button>
+                    <button type="submit" class="btn btn-login w-100 text-light mb-2">Login as Customer</button>
+                    <button type="button" class="btn btn-outline-success w-100" onclick="showSignup()">Create an Account</button>
+                </form>
+            </div>
+
+            <!-- Customer Signup Form -->
+            <div id="customer-signup" class="form-section">
+                <h4 class="text-center text-light">Create Customer Account</h4>
+                <form onsubmit="handleSignup(event)">
+                    <div class="mb-3">
+                        <label for="signup-name" class="form-label text-light">Full Name</label>
+                        <input type="text" class="form-control" id="signup-name" placeholder="Enter your name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="signup-email" class="form-label text-light">Email</label>
+                        <input type="email" class="form-control" id="signup-email" placeholder="Enter your email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="signup-password" class="form-label text-light">Password</label>
+                        <input type="password" class="form-control" id="signup-password" placeholder="Create a password" required>
+                    </div>
+                    <button type="submit" class="btn btn-login w-100 text-light mb-2">Sign Up</button>
+                    <button type="button" class="btn btn-outline-secondary w-100" onclick="showForm('customer')">Back to Login</button>
                 </form>
             </div>
             
@@ -168,6 +190,9 @@
 
     <!-- Bootstrap JS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/api.js"></script>
     <script>
         // Function to show the selected form
         function showForm(role) {
@@ -179,11 +204,91 @@
             document.getElementById(role + '-form').classList.add('active');
         }
 
-        // Function to handle form submission (demo: just alerts)
-        function handleLogin(event, role) {
-            event.preventDefault(); // Prevent actual form submission
-            alert(`Logging in as ${role}. (This is a demo - integrate with backend for real auth.)`);
-            // Here, you could add AJAX to send data to a server
+        // Function to handle form submission (integrated with backend)
+        async function handleLogin(event, role) {
+            event.preventDefault();
+            try {
+                let payload = { password: '' };
+                if (role === 'Customer') {
+                    const email = document.getElementById('customer-email').value.trim();
+                    const password = document.getElementById('customer-password').value;
+                    payload.email = email;
+                    payload.password = password;
+                } else if (role === 'Staff') {
+                    const username = document.getElementById('staff-username').value.trim();
+                    const password = document.getElementById('staff-password').value;
+                    payload.username = username;
+                    payload.password = password;
+                } else if (role === 'Admin') {
+                    const username = document.getElementById('admin-username').value.trim();
+                    const password = document.getElementById('admin-password').value;
+                    payload.username = username;
+                    payload.password = password;
+                }
+
+                const result = await api.apiRequest('/api/auth/login', {
+                    method: 'POST',
+                    body: payload,
+                });
+
+                if (result && result.token) {
+                    try {
+                        localStorage.setItem('authToken', result.token);
+                        localStorage.setItem('authUserRole', (result.user && result.user.role) || role.toLowerCase());
+                    } catch (_) {}
+
+                    // Redirect based on role
+                    const userRole = (result.user && result.user.role) || role.toLowerCase();
+                    if (userRole === 'customer' || role === 'Customer') {
+                        window.location.href = 'html/customer.html';
+                    } else if (userRole === 'staff' || role === 'Staff') {
+                        window.location.href = 'html/POS.html';
+                    } else {
+                        window.location.href = 'html/dashboard.html';
+                    }
+                } else {
+                    Swal.fire({ icon: 'error', title: 'Login failed', text: 'Please check your credentials.' });
+                }
+            } catch (err) {
+                Swal.fire({ icon: 'error', title: 'Login failed', text: err.message || 'Unknown error' });
+            }
+        }
+
+        function showSignup() {
+            document.querySelectorAll('.form-section').forEach(section => section.classList.remove('active'));
+            document.getElementById('customer-signup').classList.add('active');
+        }
+
+        // Customer signup using backend register
+        async function handleSignup(event) {
+            event.preventDefault();
+            try {
+                const name = document.getElementById('signup-name').value.trim();
+                const email = document.getElementById('signup-email').value.trim();
+                const password = document.getElementById('signup-password').value;
+                if (!name || !email || !password) {
+                    Swal.fire({ icon: 'info', title: 'Missing fields', text: 'Please fill in name, email and password' });
+                    return;
+                }
+
+                const result = await api.apiRequest('/api/auth/register', {
+                    method: 'POST',
+                    body: { name, email, password, role: 'customer' },
+                });
+
+                if (result && result.token) {
+                    try {
+                        localStorage.setItem('authToken', result.token);
+                        localStorage.setItem('authUserRole', 'customer');
+                    } catch (_) {}
+                    await Swal.fire({ icon: 'success', title: 'Account created', timer: 1200, showConfirmButton: false });
+                    window.location.href = 'html/customer.html';
+                } else {
+                    Swal.fire({ icon: 'error', title: 'Signup failed', text: 'Please try again.' });
+                }
+            } catch (err) {
+                Swal.fire({ icon: 'error', title: 'Signup failed', text: err.message || 'Unknown error' });
+            }
         }
     </script>
 </body>
